<resources>
    <string name="app_name">Mass Intention Counter</string>
    <string name="mass_intention">Mass Intention</string>
    <string name="activity_button">Activity Button</string>
    <string name="radio_button_1">Intention of the Superior</string>
    <string name="radio_button_2">Other</string>
    <string name="number_of_masses_said">Number of Masses Said:</string>
    <string name="mass_number_none">0</string>
    <string name="date">1/1/2000</string>
    <string name="mass_said_button">Mass Said</string>
    <string name="submit_report_button">Submit Report</string>
</resources>